# hephaestus

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  hephaestus-vmnet.entitlements  install.sh  justfile  release-please-config.json  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release-please.yml  release.yml
compat/firectl-harness/: .gitignore  go.mod  go.sum  main.go
docs/: ARCHITECTURE.md  COMPAT.md  DEV_ENV.md  HEPHAESTUS_STYLE.md  JAILER_MMDS_PLAN.md  README.md  ROADMAP.md  firecracker-compatibility.md  getting-started.md  performance.md
docs/design/: architecture.md  engineering-style.md  ffi.md  guest-agent.md  virtualization-framework.md
docs/development/: compatibility-testing.md  privileged-features.md  setup.md  testing.md
docs/guides/: cli.md  firecracker-api.md  guest-images.md  jailer.md  networking.md  snapshots.md  warm-pools.md
docs/project/: release-automation.md  release-policy.md  roadmap.md
guest/hephaestus-agent/: Cargo.toml  rust-toolchain.toml
guest/hephaestus-agent/.cargo/: config.toml
guest/hephaestus-agent/src/: main.rs
scripts/: build-agent.sh  check-doc-links.py  check-pr-title.py  check-product-version.sh  e2e-new-features.sh  fc-compat-config-only.sh  fc-compat-net-e2e.sh  fc-compat-sandbox-config.sh  fc-compat-sandbox-pool.sh  fc-compat-sandbox-snapshot.sh  fc-compat-sandbox.sh  fc-compat-vsock-e2e.sh  fc_compat_net_e2e.py  fc_compat_vsock_e2e.py  generate-fc-sandbox-profile.sh  link-and-sign.sh  package-vmnet-app.sh  run-vm.sh  sandbox_profile_paths.py  sync-release-lock.py  test-installer.sh  vmnet-probe.swift  vmnet_profile.py  zig-aarch64-musl-cc.sh
scripts/tests/: test_fc_compat_net_e2e.py  test_fc_compat_vsock_e2e.py  test_sandbox_profile_paths.py  test_vmnet_profile.py
src/hephaestus-bridge/: Cargo.toml  build.rs  cbindgen.toml
src/hephaestus-bridge/src/: lib.rs
src/hephaestus-cli/: Cargo.toml  build.rs
src/hephaestus-cli/src/: main.rs  pool.rs
src/hephaestus-fc-api/: Cargo.toml
src/hephaestus-fc-api/src/: backend.rs  lib.rs
src/hephaestus-fc-api/src/vmm_config/: balloon.rs  boot_source.rs  drive.rs  instance_info.rs  logger.rs  machine_config.rs  metrics.rs  mmds.rs  mod.rs  net.rs  snapshot.rs  version.rs  vm.rs  vsock.rs
src/hephaestus-firecracker/: Cargo.toml  build.rs
src/hephaestus-firecracker/src/: backend.rs  host_mmds.rs  main.rs  sandbox.rs  server.rs
src/hephaestus-jailer/: Cargo.toml
src/hephaestus-jailer/src/: main.rs  profile.rs
src/hephaestus-pool/: Cargo.toml
src/hephaestus-pool/src/: lib.rs
src/hephaestus-vmm/: Cargo.toml
src/hephaestus-vmm/src/: lib.rs
swift/HephaestusBridge/: Package.resolved  Package.swift
swift/HephaestusBridge/Sources/CHephaestusBridge/: dummy.c
swift/HephaestusBridge/Sources/CHephaestusBridge/include/: module.modulemap
swift/HephaestusBridge/Sources/HephaestusBridge/: Bridge.swift  DirectVZ.swift
