[workspace]
# hephaestus: macOS/Apple-Silicon fork. We enumerate members rather than using
# `src/*` because Firecracker's original vmm/jailer/utils/etc. are Linux-only
# and won't build on macOS. Those directories remain on disk for reference and
# upstream cherry-picks, but are excluded from the workspace until a V2 pass
# reintroduces them behind a `target_os = "linux"` cfg.
members = [
    # OS-agnostic upstream crates we still use
    "src/acpi-tables",
    "src/clippy-tracing",
    "src/log-instrument",
    "src/log-instrument-macros",
    # hephaestus-native crates
    "src/hephaestus-bridge",
    "src/hephaestus-cli",
    "src/hephaestus-fc-api",
    "src/hephaestus-firecracker",
    "src/hephaestus-vmm",
]
exclude = [
    # Upstream Firecracker crates. Excluded on macOS because their dependency
    # tree (KVM, vhost, memfd, userfaultfd, and micro_http's epoll/eventfd
    # server loop) is Linux-only. Pure-Rust API surface (vmm_config/*,
    # VmmAction data types) is re-homed under src/hephaestus-fc-api with a
    # pointer back to the upstream source.
    "src/cpu-template-helper",
    "src/firecracker",
    "src/jailer",
    "src/rebase-snap",
    "src/seccompiler",
    "src/snapshot-editor",
    "src/utils",
    "src/vmm",
]
default-members = [
    "src/hephaestus-cli",
]
resolver = "2"

[workspace.lints.rust]
missing_debug_implementations = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[workspace.lints.clippy]
ptr_as_ptr = "warn"
undocumented_unsafe_blocks = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_sign_loss = "warn"
exit = "warn"
tests_outside_test_module = "warn"
assertions_on_result_states = "warn"
error_impl_error = "warn"
or_fun_call = "warn"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
strip = "none"

[profile.bench]
strip = "debuginfo"
