[workspace]
# hephaestus is a macOS/Apple-Silicon fork of Firecracker. Only the
# hephaestus-native crates build here; the upstream Firecracker tree
# lives under `vendor/firecracker/` as reference material for the
# copy-and-sync wire-type pattern in `hephaestus-fc-api` and is
# excluded from the workspace.
members = [
    "src/hephaestus-bridge",
    "src/hephaestus-cli",
    "src/hephaestus-fc-api",
    "src/hephaestus-firecracker",
    "src/hephaestus-pool",
    "src/hephaestus-vmm",
]
exclude = [
    "vendor/firecracker",
]
default-members = [
    "src/hephaestus-cli",
]
resolver = "2"

[workspace.lints.rust]
missing_debug_implementations = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[workspace.lints.clippy]
ptr_as_ptr = "warn"
undocumented_unsafe_blocks = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_sign_loss = "warn"
exit = "warn"
tests_outside_test_module = "warn"
assertions_on_result_states = "warn"
error_impl_error = "warn"
or_fun_call = "warn"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
strip = "none"

[profile.bench]
strip = "debuginfo"
