[package]
name = "hephaestus-bridge"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
description = "Rust-side of the Swift FFI bridge to Apple's containerization framework."
# The `links` key is what lets cargo propagate our `cargo:archive=…` value to
# dependent crates' build scripts as `DEP_HEPHAESTUS_BRIDGE_ARCHIVE`.
links = "hephaestus_bridge_native"

[lib]
bench = false

[build-dependencies]
cbindgen = "0.29"

[dependencies]

[lints]
workspace = true
