[package]
name = "hephaestus-cli"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
description = "Command-line driver for hephaestus."

[[bin]]
name = "hephaestus"
path = "src/main.rs"
bench = false

[dependencies]
hephaestus-vmm = { path = "../hephaestus-vmm" }
# Direct dep so cargo sets DEP_HEPHAESTUS_BRIDGE_NATIVE_ARCHIVE for our build.rs.
hephaestus-bridge = { path = "../hephaestus-bridge" }
# flock(2) for the warm-pool slot claim; Rust 1.94's std::fs::File::lock
# is still unstable.
nix = { version = "0.30", features = ["fs"] }

[lints]
workspace = true
