[package]
name = "hephaestus-cli"
version = "0.4.0-alpha.2"
edition = "2024"
license = "Apache-2.0"
description = "Command-line driver for hephaestus."

[[bin]]
name = "hephaestus"
path = "src/main.rs"
bench = false

[dependencies]
hephaestus-vmm = { path = "../hephaestus-vmm" }
# Direct dep so cargo sets DEP_HEPHAESTUS_BRIDGE_NATIVE_ARCHIVE for our build.rs.
hephaestus-bridge = { path = "../hephaestus-bridge" }
hephaestus-pool = { path = "../hephaestus-pool" }

[lints]
workspace = true
