[package]
name = "hephaestus-firecracker"
version = "0.3.0-dev"
edition = "2024"
license = "Apache-2.0"
description = "Firecracker-compatible HTTP API shim for macOS, driving hephaestus-vmm."

[[bin]]
name = "hephaestus-firecracker"
path = "src/main.rs"
bench = false

[dependencies]
hephaestus-fc-api = { path = "../hephaestus-fc-api" }
hephaestus-pool = { path = "../hephaestus-pool" }
hephaestus-vmm = { path = "../hephaestus-vmm" }

clap = { version = "4.6.0", features = ["derive", "string"] }
hyper = { version = "1.9.0", features = ["server", "http1"] }
hyper-util = { version = "0.1.17", features = ["tokio", "server-auto"] }
http-body-util = "0.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["rt", "net", "macros", "io-util", "signal", "time"] }

[lints]
workspace = true
