[package]
name = "hephaestus-firecracker"
version = "0.4.0-alpha.2"
edition = "2024"
license = "Apache-2.0"
description = "Firecracker-compatible HTTP API shim for macOS, driving hephaestus-vmm."

[[bin]]
name = "hephaestus-firecracker"
path = "src/main.rs"
bench = false

[dependencies]
hephaestus-fc-api = { path = "../hephaestus-fc-api" }
hephaestus-pool = { path = "../hephaestus-pool" }
hephaestus-vmm = { path = "../hephaestus-vmm" }
# Direct dep so cargo sets DEP_HEPHAESTUS_BRIDGE_NATIVE_ARCHIVE for our build.rs
# (the same env var hephaestus-cli's build.rs reads to force-load the Swift archive).
hephaestus-bridge = { path = "../hephaestus-bridge" }

clap = { version = "4.6.1", features = ["derive", "string"] }
hyper = { version = "1.9.0", features = ["server", "http1"] }
hyper-util = { version = "0.1.17", features = ["tokio", "server-auto"] }
http-body-util = "0.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt", "net", "macros", "io-util", "signal", "time"] }

[lints]
workspace = true
